read credentials from a file